[gd_scene load_steps=14 format=2]

[ext_resource path="res://producto/assets/music/musica_fondo.mp3" type="AudioStream" id=1]
[ext_resource path="res://producto/scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://producto/assets/img/fondos/dalle_background.png" type="Texture" id=4]
[ext_resource path="res://producto/assets/fonts/Scream_al.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
use_filter = true
extra_spacing_top = 10
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.129412, 0.2, 0.0627451, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
use_filter = true
extra_spacing_top = 10
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.129412, 0.2, 0.0627451, 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
use_filter = true
extra_spacing_top = 10
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.129412, 0.2, 0.0627451, 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
extra_spacing_top = 10
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.129412, 0.2, 0.0627451, 1 )

[sub_resource type="DynamicFont" id=5]
size = 80
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -11.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 7

[node name="Botones" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = -222.0
margin_right = 272.0
margin_bottom = -11.0
alignment = 1

[node name="Jugar" type="Button" parent="Botones" groups=["botones"]]
margin_top = 13.0
margin_right = 247.0
margin_bottom = 56.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( -303, -33 )
custom_colors/font_color_focus = Color( 0.482353, 0.956863, 0.364706, 1 )
custom_colors/font_color = Color( 0.831373, 0.796078, 0.180392, 1 )
custom_colors/font_color_hover = Color( 0.619608, 0.980392, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0.258824, 1, 0, 1 )
custom_fonts/font = SubResource( 1 )
custom_styles/normal = SubResource( 6 )
text = "JUGAR"
icon_align = 1
expand_icon = true

[node name="Ranking" type="Button" parent="Botones" groups=["botones"]]
margin_top = 60.0
margin_right = 247.0
margin_bottom = 103.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( -303, -33 )
custom_colors/font_color_focus = Color( 0.482353, 0.956863, 0.364706, 1 )
custom_colors/font_color = Color( 0.831373, 0.796078, 0.180392, 1 )
custom_colors/font_color_hover = Color( 0.619608, 0.980392, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0.258824, 1, 0, 1 )
custom_fonts/font = SubResource( 2 )
custom_styles/normal = SubResource( 7 )
text = "RANKING"

[node name="Tienda" type="Button" parent="Botones" groups=["botones"]]
margin_top = 107.0
margin_right = 247.0
margin_bottom = 150.0
rect_min_size = Vector2( 0, 40 )
rect_pivot_offset = Vector2( -303, -33 )
custom_colors/font_color_focus = Color( 0.482353, 0.956863, 0.364706, 1 )
custom_colors/font_color = Color( 0.831373, 0.796078, 0.180392, 1 )
custom_colors/font_color_hover = Color( 0.619608, 0.980392, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0.258824, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
custom_styles/normal = SubResource( 8 )
text = "TIENDA"

[node name="Salir" type="Button" parent="Botones"]
margin_top = 154.0
margin_right = 247.0
margin_bottom = 197.0
custom_colors/font_color_focus = Color( 0.482353, 0.956863, 0.364706, 1 )
custom_colors/font_color = Color( 0.831373, 0.796078, 0.180392, 1 )
custom_colors/font_color_hover = Color( 0.619608, 0.980392, 0.298039, 1 )
custom_colors/font_color_pressed = Color( 0.258824, 1, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 9 )
text = "SALIR"

[node name="Musica_OnOff" type="CheckButton" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -76.0
margin_bottom = 52.0
pressed = true
align = 1
icon_align = 1

[node name="Musica" type="AudioStreamPlayer" parent="Musica_OnOff"]
pause_mode = 2
stream = ExtResource( 1 )
autoplay = true

[node name="VSlider" type="VSlider" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -23.0
margin_top = -292.0
margin_right = -7.0
margin_bottom = -6.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 97.0
margin_top = 49.0
margin_right = 597.0
margin_bottom = 377.0
custom_colors/default_color = Color( 0.831373, 0.796078, 0.180392, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "MAX AND MONSTER
"
fit_content_height = true
scroll_active = false

[connection signal="pressed" from="Botones/Jugar" to="." method="_on_Jugar_pressed"]
[connection signal="pressed" from="Botones/Ranking" to="." method="_on_Ranking_pressed"]
[connection signal="pressed" from="Botones/Tienda" to="." method="_on_Tienda_pressed"]
[connection signal="pressed" from="Botones/Salir" to="." method="_on_Salir_pressed"]
[connection signal="toggled" from="Musica_OnOff" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="VSlider" to="." method="_on_VSlider_value_changed"]
